[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.60687, 1.38685, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, -1.60687, 1.38685 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 479.0
margin_bottom = 718.0
color = Color( 0.0627451, 0.478431, 0.619608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 259.445, 218.753 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startpos" type="Position2D" parent="."]
position = Vector2( 240, 250 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -1.60687, 1.38685 )
rotation = -0.00287962

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="game_over_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_startTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
